<resources>
    <string name="app_name">Cocktail9</string>
    <string name="registar">RegiStar</string>
    <string name="login">LoGin</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="hint_input_name">name</string>
    <string name="hint_input_email">email</string>
    <string name="hint_input_password">password</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="input_validation_error">Input must be at least 3 characters</string>
    <string name="login_success_message">Login Successful!</string>
    <string name="edit_success_message">Edit Successful!</string>
    <string name="registration_success_message">Registration Successful!</string>
    <string name="ok">OK</string>

    <string name="shared_preferences_name">%1$s_name</string>
    <string name="shared_preferences_email">%1$s_email</string>
    <string name="shared_preferences_password">%1$s_password</string>

    <string name="spacer_text">or</string>

    <string name="argument_filter">filter</string>
    <string name="argument_filter_category">filterCategory</string>
    <string name="argument_cocktail_id">cocktailId</string>

    <string name="search_speak_to_search">Speak to search…</string>
    <string name="search_speech_to_text_not_supported">Speech recognition not supported on your device</string>
    <string name="search_no_results_found">No results found</string>


    <!-- We're adding trailing blank space due to the font we use being naturally curved,
    and wrap content cutting off the last character in edge cases -->
    <string name="search_param">Search: %1$s\u0020</string>
    <string name="filter_param">%1$s\u0020</string>
    <string name="search_screen_title">Search\u0020</string>
    <string name="filter_screen_title">Filter\u0020</string>
    <string name="category_screen_title">Category\u0020</string>
    <string name="cocktails_screen_title">Cocktails\u0020</string>
    <string name="cocktail_details_screen_title">CocktailDetails\u0020</string>
    <string name="favorites_screen_title">Favorites\u0020</string>
    <string name="profile_screen_title">Profile\u0020</string>
    <string name="ingredients">Ingredients:\u0020</string>

    <string name="filter_param_default">Alcoholic</string>

</resources>