<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg_gradient">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="@dimen/auth_label_text_size"
        android:layout_marginTop="@dimen/auth_label_margin_top"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/til_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_input"
            android:layout_width="@dimen/input_field_width"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginTop="@dimen/input_field_marginTop"
            app:endIconDrawable="@drawable/baseline_edit_24"
            app:endIconCheckable="true"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_input"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/black"
                android:padding="0dp"
                android:gravity="center"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_input"
        android:layout_width="@dimen/input_field_width"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/input_field_marginTop"
        app:endIconDrawable="@drawable/baseline_edit_24"
        app:endIconCheckable="true"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@id/til_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_input"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:enabled="false"
            android:textColor="@color/black"
            android:padding="@dimen/match_constraint"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="@dimen/spacer_horizontal_margin"
        android:layout_marginEnd="@dimen/spacer_horizontal_margin"
        android:layout_marginTop="@dimen/profile_spacer_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password_input">
        <View
            android:id="@+id/v_spacer_left"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/spacer_height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacer_horizontal_margin"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacer_text"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/spacer_text_horizontal_margin" />

        <View
            android:id="@+id/v_spacer_right"
            android:layout_marginStart="@dimen/spacer_horizontal_margin"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/spacer_height"
            android:layout_weight="1"
            android:background="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginTop="@dimen/register_button_margin_top"
        android:background="@drawable/button_auth_blur"
        app:cornerRadius="@dimen/match_constraint"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/auth_button_text_size"
        android:text="@string/logout"
        android:drawableLeft="@drawable/ic_login_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_spacer" />

    <ImageView
        android:layout_marginTop="@dimen/auth_image_margin"
        android:layout_marginBottom="@dimen/auth_image_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cuba_libre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
